# zero_to_production_rust

./: .env  Cargo.toml  Dockerfile.migrate  Dockerfile.test  configuration.yaml  docker-compose.yml  init.sql  sample.env
.github/workflows/: continuous-integration.yml  integration.yml
scripts/: db_init.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscribe.rs
tests/: health_check.rs
